--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,16 @@ li[ui-sref]:hover {
   padding-left: 5px;
   padding-right: 5px;
 }
+
+button{
+  padding: 0 6px 0 6px;
+ margin: 6px 8px 6px 8px;
+ min-width: 88px;
+ border-radius: 3px;
+ font-size: 14px;
+ text-align: center;
+ text-transform: uppercase;
+ text-decoration:none;
+ border: none;
+ outline: none;
+}
